# spectcomm-py

./: .gitignore  pyproject.toml
src/airel/spectcomm/: __init__.py  remote.py  serial_connection.py  spectcore.py
