[project]
name = "spectcomm-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sander Mirme", email = "sander@airel.ee" }
]
requires-python = ">=3.10"
dependencies = [
    "cobs>=1.2.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/airel"]

